--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "last 2 versions"
   ],
   "dependencies": {
+    "@tailwindcss/postcss": "^4.1.17",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.9.5"
+    "react-router-dom": "^7.9.5",
+    "tailwindcss": "^4.1.17"
   }
 }
